nuevas actualizaciones parte 2

--- a/Folders/IngresarUsuario.html
+++ b/Folders/IngresarUsuario.html
@@ -12,15 +12,17 @@
     
     <!--Formulario ingresar-->
     <div class="caja-formulario">
-        <form class="formulario" action="">
+        <form class="formulario" action="" id="form">
             <div class="caja-input">
                 <h3 class="h3-usuario">Ingresar usuario</h3>
-                <input class="input" type="text">
-                <input class="input" type="password">
+                <input id="nombre" class="input" type="text">
+                <input id="clave" class="input" type="password">
                 <button class="button">ingresar</button>     
             </div>
         </form>
     </div>
   </div>
+
+  <script src="../js/index.js"></script>
 </body>
 </html>
