--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
       <button class="btn-pantalla1"> <a class="link-pantalla2" href="./Folders/IngresarUsuario.html">Ingresar</a></button>
     </div>
   </div>
+
+  <script src="./js/index.js"></script>
 </body>
 </html>
