--- a/Folders/IngresarUsuario.html
+++ b/Folders/IngresarUsuario.html
@@ -17,7 +17,7 @@
                 <h3 class="h3-usuario">Ingresar usuario</h3>
                 <input id="nombre" class="input" type="text">
                 <input id="clave" class="input" type="password">
-                <button class="button">ingresar</button>     
+                <button id="ingresar" class="button">ingresar</button>     
             </div>
         </form>
     </div>
